# Qt_fidge

./: CMakeLists.txt  Main.qml  README.md  README.md~  fridge_app.cpp  fridge_app.h  fridge_model.cpp  fridge_model.h  main.cpp  resources.qrc  tst_fridgeapp.cpp
.github/workflow/: deploy.yml~
.github/workflows/: .deploy.yml.swp  deploy.yml  deploy.yml~
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  appFridge_qml.cmake  appFridge_res.cmake
.qt/deploy_qml_imports/: appFridge.cmake
.qt/qml_imports/: appFridge_build.rsp  appFridge_conf.cmake  appFridge_conf.rsp
.qt/rcc/: appFridge_raw_qml_0.qrc  qmake_Fridge.qrc  qrc_qmake_Fridge.cpp  qrc_resources.cpp
.rcc/qmlcache/: all_aotstats.aotstatslist  appFridge_Main_qml.cpp  appFridge_Main_qml.cpp.aotstats  appFridge_qml_loader_file_list.rsp  appFridge_qmlcache_loader.cpp  module_appFridge.aotstatslist
.rcc/qmllint/: appFridge.rsp  appFridge_json.rsp  appFridge_module.rsp
